- some cleanups of dead code
- plugins can now be placed in different menus
- keep list of components/plugins and menu-hierarchy in (few) .pluginmap files instead of parsing directory structure
- improved handling of tcltk windows
- new icon
- decrease default debug level
- don't crash when objects change their type from vector to list/data.frame, etc.
- graph-creation no longer relies on (removable) R objects (can graph after loading a workspace)

--- Version 0.3.2 - Apr-27-2005
- overloaded require works properly with character.only=FALSE
- several API documentation improvement
- hidden objects get shown/hidden according to configuration setting
- settings dialog honors KDE-button order
- R's x11 windows now handle their events (x11-device is now usable)
- fixed bug in the output (no update on empty output)
- paste in the console is properly handled
- r console and command log divorced
- console can handle incomplete statements (allowing multi-line input)
- fixed silly crash on incomplete statements
- updated spanish translation
- new plugin (graph)
- reworked the interface to use kparts properly

--- Version 0.3.1 - Mar-26-2005
- added the possibility to unable widget in plugins.
- added a new plugin (basic statistics)
- added icons in the object browser
- using IDEAI dock mode style
- new, console-like widget to enter commands manually.
- added a class to show html help in an mdi child
- added a new dock to search R help
- many changes in labels
- fixed: bug that prevented RKWard to build on some systems
- added R functions to show graphs in the html output and to print objects (using E. Lecoutre's R2HTML)
- use a KHTML part to show output (instead of the qt widget)

--- Version 0.3.0 - Nov-12-2004
- added french and italian translations
- added toolbars and some icons
- some small i18n fixes
- rework of user interface (now using KMDI and IDEAl mode)
- compilation fix for R 2.0