@@ -11,8 +11,9 @@ Little annoying stuff:
 
 - Use R_WriteConsole-override instead of sink. Find a way to do the same for stderr
 	- "real time" display of output in the console
-- make the data-editor a KMdiChild, and probably a KPart, so we can have a consistent way of GUI merging.
-- override help ()
+- make the output a KMdiChild, and probably a KPart, so we can have a consistent way of GUI merging; make command-editor a KPart
+	- add "window"-menu, esp. Window->close
+
 
 stuff to do before 0.3.2 release
 - plugins (general)
