@@ -3,7 +3,10 @@ METASOURCES = AUTO
 noinst_LIBRARIES =  libdataeditor.a
 libdataeditor_a_SOURCES = twintable.cpp twintablemember.cpp rkdrag.cpp \
 	rkeditor.cpp rkeditordataframe.cpp twintabledatamember.cpp twintablemetamember.cpp \
-	celleditor.cpp editlabelsdialog.cpp editformatdialog.cpp
+	celleditor.cpp editlabelsdialog.cpp editformatdialog.cpp rkeditordataframepart.cpp
 noinst_HEADERS = rkdrag.h twintable.h twintablemember.h rkeditor.h \
-	rkeditordataframe.h twintabledatamember.h twintablemetamember.h celleditor.h \
-	editlabelsdialog.h editformatdialog.h
+		rkeditordataframe.h twintabledatamember.h twintablemetamember.h celleditor.h \
+		editlabelsdialog.h editformatdialog.h rkeditordataframepart.h
+
+rcdir = $(kde_datadir)/rkward
+rc_DATA = rkeditordataframepart.rc
